testcases/malgo/error/ErrorInvalidIdent.mlg
module ErrorInvalidIdent = {
  let = {x f -> f x};
}